5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1644_2711.log
== SUBMITION (2019-04-16 08:32:05) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if(valor >= total):
	print("suficiente".upper())
else(valo < total):
	print("innsuficiente".upper())
-- EXECUTION TIME:
0.157864
-- ERROR:
  File "/home/codebench/codes/1644/2711/main.py", line 10
    else(valo < total):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:48:14) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if (valor >= total):
	print("suficiente".upper())
else:
	print("innsuficiente".upper())
-- EXECUTION TIME:
0.212836
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INNSUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 08:49:13) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if (valor >= total):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 08:50:06) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if (valor >= total):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.165477
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 14:39:19) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if (valor >= total):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 14:39:41) 
-- CODE:
valor = float(input("valor disonivel:"))
qt = int(input("quantidades de tickes do RU:"))
vt = float(input("valor dos tickets:"))
qp = int(input("quantidades de passes de onibus:"))
vp = float(input("valor dos passes"))

total = (qt*vt) + (qp*vp)
if (valor >= total):
	print("suficiente".upper())
else:
	print("insuficiente".upper())
-- EXECUTION TIME:
0.149107
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
